<resources>
    <string name="app_name">EnCI4</string>
    <string name="title_activity_fourthy">Activity_fourthy</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="_3_investigacao">3. INVESTIGAÇÃO</string>
    <string name="exploracao4">Exploração</string>
    <string name="busque_por_novas_informacoes_para_fortalecer_ou_refutar_as_ideias_levantadas_ate_aqui_por_ex_pesquisas_entrevistas_etc_releia_os_passos_anteriores_se_for_preciso">Busque por novas informações para fortalecer ou refutar as ideias levantadas até aqui, por ex: pesquisas, entrevistas, etc. Releia os passos anteriores, se for preciso.</string>
    <string name="avancar1">Avançar</string>
    <string name="realize_experimentos_para_testar_suas_hipoteses_com_a_supervisao_do_professor_atencao_toda_e_qualquer_experiencia_perigosa_ou_nociva_e_terminantemente_proibida">Realize experimentos para testar suas hipóteses, com a supervisão do professor. ATENÇÃO: TODA E QUALQUER EXPERIÊNCIA PERIGOSA OU NOCIVA É TERMINANTEMENTE PROIBIDA.</string>
    <string name="realize_experimentos">Realize experimentos para testar suas hipóteses, com a supervisão do professor. ATENÇÃO: TODA E QUALQUER EXPERIÊNCIA PERIGOSA OU NOCIVA É TERMINANTEMENTE PROIBIDA.</string>
    <string name="_4_conclusao2">4. CONCLUSÃO</string>
    <string name="responda_pergunta_do_problema_baseado_nos_passos_anteriores">Responda à pergunta problema</string>
    <string name="Interpretacao">Interpretação de Dados</string>
    <string name="iniciar2">Iniciar</string>
    <string name="logo">Logo</string>
    <string name="lema">Lema</string>
    <string name="criacao">Criacao</string>
    <string name="digite_a_turma_ex_1a_2b_etc">Digite a turma. Ex: 1A, 2B, etc.</string>
    <string name="avancar3">Avançar</string>
    <string name="bemvindo">Bem vindo! Este aplicativo irá guiá-lo ao instigante mundo da descoberta. Siga todas as sequências de telas digitando corretamente o que se pede.</string>
    <string name="nomesintegrantes">Digite os nomes dos integrantes da equipe</string>
    <string name="_1_orientacao">1. ORIENTAÇÃO</string>
    <string name="pergunta_problema">Qual é a pergunta problema?</string>
    <string name="Pergunta">Digite aqui a pergunta problema que o professor apresentar</string>
    <string name="avancar4">Avançar</string>
    <string name="Hipoteses">Digite aqui todas as possíveis hipóteses levantadas pelo seu grupo para tentar responder a situação problema trazida pelo professor.</string>
    <string name="_2_contextualizacao">2. CONTEXTUALIZAÇÃO</string>
    <string name="hipoteses">Hipóteses</string>
    <string name="avancar10">Avançar</string>
    <string name="questionamentos">Questionamentos</string>
    <string name="Critique">Critique suas próprias hipóteses e veja onde elas podem estar erradas na tentativa de explicar a pergunta problema.</string>
    <string name="_2_contextualizacao1">2. CONTEXTUALIZAÇÃO</string>
    <string name="avancar6">Avançar</string>
    <string name="enviar_o_trabalho">Enviar o trabalho</string>
    <string name="parabens">PARABÉNS!!! Você concluiu o seu trabalho. Agora clique no botão ENVIAR para transferir suas respostas ao professor.</string>
    <string name="_5_envio">5. Envio</string>
    <string name="Organize">Organize suas ideias, registrando todos os dados colhidos por você até aqui, elaborando uma lista de pistas seguras para lhe ajudar a chegar a uma conclusão lógica sobre seu trabalho.</string>
    <string name="avancar8">Avançar</string>
    <string name="avancar5">Avançar</string>
    <string name="avancar11">Avançar</string>
    <string name="avancar12">Avançar</string>
    <string name="Avançar6">Avançar</string>
    <string name="exploracao">Exploração</string>
    <string name="avancar7">Avançar</string>
    <string name="exploracao1">Exploração</string>
    <string name="elabore">Elabore um texto argumentativo baseado em todas as informações colhidas por você durante o trabalho. Esta conclusão deverá estar obrigatoriamente coerente com todos os passos anteriores.</string>
    <string name="avancar9">Avançar</string>
    <string name="responda">Responda à pergunta problema</string>
    <string name="_4_conclusao">4. CONCLUSÃO</string>
    <string name="avancar">Avançar</string>
    <string name="experimentacao">Experimentação</string>
    <string name="_5_enviodatarefa">5. ENVIO</string>
    <string name="botaoenviar">Enviar o trabalho para o professor</string>
    <string name="voceconcluiu">Você concluiu sua tarefa. Agora clique no botão abaixo para transferir seu trabalho ao professor.</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="enter">Entrar</string>
    <string name="signIn">Não tem uma conta? Crie aqui.</string>
    <string name="Lema_do_PEnCI">O Ensino por Investigação na ponta dos dedos.</string>
    <string name="author">Criação e produção Augusto Othon Profbio/UECE</string>
    <string name="avanco">Avançar</string>
    <string name="interpretacao_de_dados">Interpretação de Dados</string>

</resources>
