<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientgreen"
    tools:context=".seventhyActivity">

    <Button
        android:id="@+id/button7"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/avancar7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText5" />

    <EditText
        android:id="@+id/editText5"
        android:layout_width="309dp"
        android:layout_height="168dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/realize_experimentos"
        android:inputType="textMultiLine"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView11"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="177dp"
        android:layout_height="28dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        android:hint="@string/realize_experimentos_para_testar_suas_hipoteses_com_a_supervisao_do_professor_atencao_toda_e_qualquer_experiencia_perigosa_ou_nociva_e_terminantemente_proibida"
        android:text="@string/experimentacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="295dp"
        android:layout_height="34dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/_3_investigacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#3F51B5"
        android:textStyle="bold"
        app:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>