<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientviolet"
    tools:context=".fiftyActivity">

    <Button
        android:id="@+id/button5"
        android:layout_width="90dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/avancar5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="309dp"
        android:layout_height="168dp"
        android:layout_marginTop="32dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/Critique"
        android:inputType="textMultiLine"
        android:padding="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="177dp"
        android:layout_height="28dp"
        android:layout_marginTop="52dp"
        android:text="@string/questionamentos"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="295dp"
        android:layout_height="34dp"
        android:layout_marginTop="88dp"
        android:gravity="center"
        android:text="@string/_2_contextualizacao"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#BAC5FF"
        android:textStyle="bold"
        app:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>