<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradientblu"
    tools:context=".IdentActivity">

    <EditText
        android:id="@+id/editText9"
        android:layout_width="204dp"
        android:layout_height="20dp"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/digite_a_turma_ex_1a_2b_etc"
        android:inputType="textPersonName"
        android:textColor="#000000"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText10"
        android:autofillHints="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/avanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText9" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="303dp"
        android:layout_height="141dp"
        android:layout_marginTop="64dp"
        android:background="@android:color/holo_orange_dark"
        android:gravity="center"
        android:text="@string/bemvindo"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:fontFamily="@font/aldrich"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lineHeight="25sp" />

    <EditText
        android:id="@+id/editText10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:gravity="top"
        android:hint="@string/nomesintegrantes"
        android:inputType="textMultiLine"
        android:paddingStart="10sp"
        android:textColor="#000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        android:autofillHints="" />

</androidx.constraintlayout.widget.ConstraintLayout>